--- a/src/main/java/View/TeacherUI.form
+++ b/src/main/java/View/TeacherUI.form
@@ -1104,6 +1104,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="X&#xf3;a sinh vi&#xea;n"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnDeleteStudentMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
